# fieldnotes-lm

./: .gitignore  README.md  packages.txt  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
.devcontainer/: devcontainer.json
open_notebook/domain/: base.py
pages/: 1_🔍_Test_Connection.py  2_📒_Notebooks.py
