[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "fieldnotes-lm"
version = "0.1.0"
description = "Your personal AI-powered research assistant and note-taking tool"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9,<3.10"
packages = [
    {include = "open_notebook", from = "src"}
]

[tool.poetry]
name = "fieldnotes-lm"
version = "0.1.0"
description = "Your personal AI-powered research assistant and note-taking tool"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
python = ">=3.9,<3.10"
packages = [
    {include = "open_notebook", from = "src"}
]
dependencies = [
    "streamlit==1.32.0",
    "watchdog==3.0.0",
    "pydantic==2.6.3",
    "loguru==0.7.2",
    "langchain==0.1.9",
    "humanize==4.11.0",
    "streamlit-tags==1.2.8",
    "tiktoken==0.6.0",
    "pymupdf==1.24.0",
    "python-magic==0.4.27",
    "langdetect==1.0.9",
    "google-generativeai==0.3.2",
    "langchain-google-genai==0.0.11",
    "python-dotenv==1.0.1"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.5",
    "mypy>=1.11.1",
    "types-requests>=2.32.0.20241016"
]

[tool.isort]
profile = "black"
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
